--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -40,4 +40,12 @@
   .cart__wrapper {
     padding: 50px 30px;
   }
+}
+@media screen and (max-width: 560px) {
+  .cart__wrapper {
+    padding: 50px 15px;
+  }
+  .cart__total {
+    margin-top: 15px;
+  }
 }/*# sourceMappingURL=Cart.css.map */
