--- a/src/Pages/Cart/Cart.scss
+++ b/src/Pages/Cart/Cart.scss
@@ -29,3 +29,13 @@
         padding: 50px 30px;
     }
 }
+
+@media screen and (max-width: 560px){
+    .cart__wrapper {
+        padding: 50px 15px;
+    }
+
+    .cart__total {
+        margin-top: 15px;
+    }
+}
