--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -4,6 +4,20 @@
   flex-direction: column;
   width: 100%;
 }
+.cart__wrapper .back-to-shopping {
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+.cart__wrapper .empty-cart-img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+}
+.cart__wrapper.empty {
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
 
 .cart__purshaseButton {
   background-color: #0c8f97;
